--- a/template/package.json
+++ b/template/package.json
@@ -18,9 +18,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"{{/lint}}
   },
   "dependencies": {
-    "vue": "^1.0.21",
+    "vue": "^1.0.26",
     "vue-router": "^0.7.13",
-    "babel-runtime": "^6.0.0"
+    "vuex": "^1.0.0-rc.2",
+    "babel-runtime": "^6.9.2",
+    "babel-polyfill": "^6.13.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -64,11 +66,13 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.24",
+    "karma-spec-reporter": "^0.0.24",
     "karma-webpack": "^1.7.0",
     "lolex": "^1.4.0",
     "mocha": "^2.4.5",
+    "node-sass": "^3.8.0",
     "chai": "^3.5.0",
+    "sass-loader": "^4.0.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "inject-loader": "^2.0.1",
@@ -79,7 +83,7 @@
     "chromedriver": "^2.21.2",
     "cross-spawn": "^2.1.5",
     "nightwatch": "^0.8.18",
-    "selenium-server": "2.53.0",
+    "selenium-server": "^2.53.0",
     {{/e2e}}
     "ora": "^0.2.0",
     "shelljs": "^0.6.0",
