--- a/template/package.json
+++ b/template/package.json
@@ -13,7 +13,9 @@
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
   },
   "dependencies": {
-    "vue": "^2.0.1"
+    "vue": "^2.0.1",
+    "vue-router": "^2.0.0",
+    "vuex": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -23,6 +25,7 @@
     {{/lint}}
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
